force-app/main/default/objects/CC_Email_Activity__c/CC_Email_Activity__c.object-meta.xml
<CustomObject>
    <description>One summary record per Contact per CC email: opened/clicked flags, counts, and dates. Kept current each poll (not one row per event). Child (lookup) of CC_Email__c and Contact. JSI-109 / Jason Ott.</description>
    <label>CC Email Activity</label>
    <nameField>
        <displayFormat>EA-{000000}</displayFormat>
        <label>Activity Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Email Activities</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>