force-app/main/default/objects/CC_Email_Activity__c/fields/Activity_Key__c.field-meta.xml
<CustomField>
    <fullName>Activity_Key__c</fullName>
    <description>Idempotent upsert key: {CC_Campaign_Activity_Id}|{CC_Contact_Id}. Ensures one summary row per contact per email. JSI-109 / Jason Ott.</description>
    <externalId>true</externalId>
    <label>Activity Key</label>
    <length>120</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>