force-app/main/default/objects/CC_Email_Activity__c/fields/Bounced__c.field-meta.xml
<CustomField>
    <fullName>Bounced__c</fullName>
    <description>Bounced flag for this contact on this email. JSI-109 / Jason Ott.</description>
    <label>Bounced</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>