force-app/main/default/objects/CC_Email_Activity__c/fields/CC_Email__c.field-meta.xml
<CustomField>
    <fullName>CC_Email__c</fullName>
    <description>The CC email this activity summarizes. JSI-109 / Jason Ott.</description>
    <label>CC Email</label>
    <referenceTo>CC_Email__c</referenceTo>
    <relationshipLabel>Email Activities</relationshipLabel>
    <relationshipName>Email_Activities</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>