force-app/main/default/objects/CC_Email_Activity__c/fields/Click_Count__c.field-meta.xml
<CustomField>
    <fullName>Click_Count__c</fullName>
    <description>Click Count for this contact on this email. JSI-109 / Jason Ott.</description>
    <label>Click Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>