force-app/main/default/objects/CC_Email_Activity__c/fields/Clicked__c.field-meta.xml
<CustomField>
    <fullName>Clicked__c</fullName>
    <description>Clicked flag for this contact on this email. JSI-109 / Jason Ott.</description>
    <label>Clicked</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>