force-app/main/default/objects/CC_Email_Activity__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>The recipient Contact. JSI-109 / Jason Ott.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Email Activities</relationshipLabel>
    <relationshipName>CC_Email_Activities</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>