force-app/main/default/objects/CC_Email_Activity__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <description>Cross-object formula (Contact__r.Name) so the recipient is reportable on the CC Email Engagement report type without parent dot-walk. JSI-109 / Jason Ott.</description>
    <formula>TRIM(BLANKVALUE(Contact__r.FirstName, "") &amp; " " &amp; Contact__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>