force-app/main/default/objects/CC_Email_Activity__c/fields/Email_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_Sent_Date__c</fullName>
    <description>Cross-object formula (CC_Email__r.Sent_Date__c) for time-based grouping/filtering of engagement. JSI-109 / Jason Ott.</description>
    <formula>CC_Email__r.Sent_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Email Sent Date</label>
    <type>DateTime</type>
</CustomField>