force-app/main/default/objects/CC_Email_Activity__c/fields/Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>Email_Subject__c</fullName>
    <description>Cross-object formula (CC_Email__r.Subject__c) so activities are groupable by email on the report type. JSI-109 / Jason Ott.</description>
    <formula>CC_Email__r.Subject__c</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Email Subject</label>
    <type>Text</type>
</CustomField>