force-app/main/default/objects/CC_Email_Activity__c/fields/First_Click_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Click_Date__c</fullName>
    <description>First Click Date for this contact on this email. JSI-109 / Jason Ott.</description>
    <label>First Click Date</label>
    <type>DateTime</type>
</CustomField>