force-app/main/default/objects/CC_Email_Activity__c/fields/Last_Click_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Click_Date__c</fullName>
    <description>Last Click Date for this contact on this email. JSI-109 / Jason Ott.</description>
    <label>Last Click Date</label>
    <type>DateTime</type>
</CustomField>