force-app/main/default/objects/CC_Email_Activity__c/fields/Last_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Open_Date__c</fullName>
    <description>Last Open Date for this contact on this email. JSI-109 / Jason Ott.</description>
    <label>Last Open Date</label>
    <type>DateTime</type>
</CustomField>