force-app/main/default/objects/CC_Email_Activity__c/fields/Opened__c.field-meta.xml
<CustomField>
    <fullName>Opened__c</fullName>
    <description>Opened flag for this contact on this email. JSI-109 / Jason Ott.</description>
    <label>Opened</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>