force-app/main/default/objects/CC_Email_Activity__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Highest engagement state reached by this contact for this email. JSI-109 / Jason Ott.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Sent</fullName><default>false</default><label>Sent</label></value>
            <value><fullName>Opened</fullName><default>false</default><label>Opened</label></value>
            <value><fullName>Clicked</fullName><default>false</default><label>Clicked</label></value>
            <value><fullName>Bounced</fullName><default>false</default><label>Bounced</label></value>
            <value><fullName>Unsubscribed</fullName><default>false</default><label>Unsubscribed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>